stretched the add-button so it has the correct height

--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -477,7 +477,7 @@
 
   .a-boxAddBtn-inner {
     display: block;
-    min-height: 160px;
+    min-height: 168px;
     padding-top: $spacer * 1.5;
     background-color: transparent;
     border: 2px dotted $blue;
